--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "task1": "nodemon task1.ts"
+    "task1": "nodemon task1.ts",
+    "task2": "nodemon task2.ts",
+    "task1WithBabel": "babel-node -x .ts -- task1.ts",
+    "task2WithBabel": "babel-node -x .ts -- task2.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,10 @@
   },
   "homepage": "https://github.com/kukhalilov/node-global-mentoring#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
