--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "task1": "nodemon task1.ts",
-    "task2": "nodemon task2.ts",
-    "task1WithBabel": "babel-node -x .ts -- task1.ts",
-    "task2WithBabel": "babel-node -x .ts -- task2.ts"
+    "start": "nodemon --watch *.ts --exec ts-node ./app.ts",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -21,15 +19,19 @@
   },
   "homepage": "https://github.com/kukhalilov/node-global-mentoring#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "express": "^4.18.2",
+    "express-joi-validation": "^5.0.1",
+    "uuid": "^9.0.0"
   }
 }
