--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon --watch *.ts --exec ts-node ./app.ts",
+    "start": "tsc && nodemon -r dotenv/config --watch *.ts --exec ts-node ./src/app.ts",
+    "build": "tsc",
+    "dev": "nodemon -r dotenv/config ./src/app.ts",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -21,7 +24,6 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
-    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
@@ -30,8 +32,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-joi-validation": "^5.0.1",
-    "uuid": "^9.0.0"
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
