--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "tsc && nodemon -r dotenv/config --watch *.ts --exec ts-node ./src/app.ts",
     "build": "tsc",
     "dev": "nodemon -r dotenv/config ./src/app.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest --setupFiles dotenv/config --forceExit"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
